grammar copy/GParser.py
# Generated from G.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class GParser ( Parser ):

    grammarFileName = "G.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'['", "','", "']'", "'='", "':'", "'func'", 
                     "'()'", "'->'", "'('", "')'", "'return'", "'if'", "'else if'", 
                     "'else'", "'for'", "'in'", "'while'", "'!'", "'**'", 
                     "'*'", "'/'", "'//'", "'%'", "'+'", "'-'", "'<'", "'>'", 
                     "'<='", "'>='", "'=='", "'!='", "'&&'", "'||'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "TYPE", "BOOL", "NUMBER", 
                      "IDENTIFIER", "WP", "COMMENT", "BLOCK_OPEN", "BLOCK_CLOSE", 
                      "STRING" ]

    RULE_string = 0
    RULE_boolean = 1
    RULE_number = 2
    RULE_primitive = 3
    RULE_listExpression = 4
    RULE_listAccess = 5
    RULE_listAssignment = 6
    RULE_variableDefinition = 7
    RULE_functionDefinition = 8
    RULE_assignment = 9
    RULE_functionCall = 10
    RULE_returnStatement = 11
    RULE_ifStatement = 12
    RULE_elseIfStatement = 13
    RULE_elseStatement = 14
    RULE_forLoop = 15
    RULE_whileLoop = 16
    RULE_expression = 17
    RULE_instruction = 18

    ruleNames =  [ "string", "boolean", "number", "primitive", "listExpression", 
                   "listAccess", "listAssignment", "variableDefinition", 
                   "functionDefinition", "assignment", "functionCall", "returnStatement", 
                   "ifStatement", "elseIfStatement", "elseStatement", "forLoop", 
                   "whileLoop", "expression", "instruction" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    TYPE=34
    BOOL=35
    NUMBER=36
    IDENTIFIER=37
    WP=38
    COMMENT=39
    BLOCK_OPEN=40
    BLOCK_CLOSE=41
    STRING=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StringContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(GParser.STRING, 0)

        def getRuleIndex(self):
            return GParser.RULE_string

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)




    def string(self):

        localctx = GParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(GParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BooleanContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(GParser.BOOL, 0)

        def getRuleIndex(self):
            return GParser.RULE_boolean

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolean" ):
                listener.enterBoolean(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolean" ):
                listener.exitBoolean(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolean" ):
                return visitor.visitBoolean(self)
            else:
                return visitor.visitChildren(self)




    def boolean(self):

        localctx = GParser.BooleanContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_boolean)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(GParser.BOOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NumberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(GParser.NUMBER, 0)

        def getRuleIndex(self):
            return GParser.RULE_number

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber" ):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)




    def number(self):

        localctx = GParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_number)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(GParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrimitiveContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boolean(self):
            return self.getTypedRuleContext(GParser.BooleanContext,0)


        def number(self):
            return self.getTypedRuleContext(GParser.NumberContext,0)


        def string(self):
            return self.getTypedRuleContext(GParser.StringContext,0)


        def getRuleIndex(self):
            return GParser.RULE_primitive

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimitive" ):
                listener.enterPrimitive(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimitive" ):
                listener.exitPrimitive(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitive" ):
                return visitor.visitPrimitive(self)
            else:
                return visitor.visitChildren(self)




    def primitive(self):

        localctx = GParser.PrimitiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_primitive)
        try:
            self.state = 47
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GParser.BOOL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.boolean()
                pass
            elif token in [GParser.NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.number()
                pass
            elif token in [GParser.STRING]:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.string()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(GParser.ExpressionContext,i)


        def getRuleIndex(self):
            return GParser.RULE_listExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListExpression" ):
                listener.enterListExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListExpression" ):
                listener.exitListExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListExpression" ):
                return visitor.visitListExpression(self)
            else:
                return visitor.visitChildren(self)




    def listExpression(self):

        localctx = GParser.ListExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_listExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(GParser.T__0)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GParser.T__0) | (1 << GParser.T__8) | (1 << GParser.T__17) | (1 << GParser.BOOL) | (1 << GParser.NUMBER) | (1 << GParser.IDENTIFIER) | (1 << GParser.STRING))) != 0):
                self.state = 50
                self.expression(0)


            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GParser.T__1:
                self.state = 53
                self.match(GParser.T__1)
                self.state = 54
                self.expression(0)
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.match(GParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListAccessContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.key = None # ExpressionContext

        def IDENTIFIER(self):
            return self.getToken(GParser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(GParser.ExpressionContext,0)


        def getRuleIndex(self):
            return GParser.RULE_listAccess

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListAccess" ):
                listener.enterListAccess(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListAccess" ):
                listener.exitListAccess(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListAccess" ):
                return visitor.visitListAccess(self)
            else:
                return visitor.visitChildren(self)




    def listAccess(self):

        localctx = GParser.ListAccessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_listAccess)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            localctx.name = self.match(GParser.IDENTIFIER)
            self.state = 63
            self.match(GParser.T__0)
            self.state = 64
            localctx.key = self.expression(0)
            self.state = 65
            self.match(GParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListAssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.key = None # ExpressionContext
            self.value = None # ExpressionContext

        def IDENTIFIER(self):
            return self.getToken(GParser.IDENTIFIER, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(GParser.ExpressionContext,i)


        def getRuleIndex(self):
            return GParser.RULE_listAssignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListAssignment" ):
                listener.enterListAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListAssignment" ):
                listener.exitListAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListAssignment" ):
                return visitor.visitListAssignment(self)
            else:
                return visitor.visitChildren(self)




    def listAssignment(self):

        localctx = GParser.ListAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_listAssignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            localctx.name = self.match(GParser.IDENTIFIER)
            self.state = 68
            self.match(GParser.T__0)
            self.state = 69
            localctx.key = self.expression(0)
            self.state = 70
            self.match(GParser.T__2)
            self.state = 71
            self.match(GParser.T__3)
            self.state = 72
            localctx.value = self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableDefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(GParser.IDENTIFIER, 0)

        def TYPE(self):
            return self.getToken(GParser.TYPE, 0)

        def expression(self):
            return self.getTypedRuleContext(GParser.ExpressionContext,0)


        def getRuleIndex(self):
            return GParser.RULE_variableDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDefinition" ):
                listener.enterVariableDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDefinition" ):
                listener.exitVariableDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDefinition" ):
                return visitor.visitVariableDefinition(self)
            else:
                return visitor.visitChildren(self)




    def variableDefinition(self):

        localctx = GParser.VariableDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_variableDefinition)
        try:
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.match(GParser.IDENTIFIER)
                self.state = 75
                self.match(GParser.T__4)
                self.state = 76
                self.match(GParser.TYPE)
                self.state = 77
                self.match(GParser.T__3)
                self.state = 78
                self.expression(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.match(GParser.IDENTIFIER)
                self.state = 80
                self.match(GParser.T__4)
                self.state = 81
                self.match(GParser.TYPE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionDefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.return_type = None # Token

        def IDENTIFIER(self):
            return self.getToken(GParser.IDENTIFIER, 0)

        def TYPE(self):
            return self.getToken(GParser.TYPE, 0)

        def variableDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GParser.VariableDefinitionContext)
            else:
                return self.getTypedRuleContext(GParser.VariableDefinitionContext,i)


        def getRuleIndex(self):
            return GParser.RULE_functionDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDefinition" ):
                listener.enterFunctionDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDefinition" ):
                listener.exitFunctionDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDefinition" ):
                return visitor.visitFunctionDefinition(self)
            else:
                return visitor.visitChildren(self)




    def functionDefinition(self):

        localctx = GParser.FunctionDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_functionDefinition)
        self._la = 0 # Token type
        try:
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.match(GParser.T__5)
                self.state = 85
                localctx.name = self.match(GParser.IDENTIFIER)
                self.state = 86
                self.match(GParser.T__6)
                self.state = 87
                self.match(GParser.T__7)
                self.state = 88
                localctx.return_type = self.match(GParser.TYPE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.match(GParser.T__5)
                self.state = 90
                localctx.name = self.match(GParser.IDENTIFIER)
                self.state = 91
                self.match(GParser.T__8)
                self.state = 92
                self.variableDefinition()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==GParser.T__1:
                    self.state = 93
                    self.match(GParser.T__1)
                    self.state = 94
                    self.variableDefinition()
                    self.state = 99
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 100
                self.match(GParser.T__9)
                self.state = 101
                self.match(GParser.T__7)
                self.state = 102
                localctx.return_type = self.match(GParser.TYPE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(GParser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(GParser.ExpressionContext,0)


        def getRuleIndex(self):
            return GParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = GParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(GParser.IDENTIFIER)
            self.state = 107
            self.match(GParser.T__3)
            self.state = 108
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionCallContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(GParser.IDENTIFIER, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(GParser.ExpressionContext,i)


        def getRuleIndex(self):
            return GParser.RULE_functionCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCall" ):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)




    def functionCall(self):

        localctx = GParser.FunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_functionCall)
        self._la = 0 # Token type
        try:
            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.match(GParser.IDENTIFIER)
                self.state = 111
                self.match(GParser.T__8)
                self.state = 112
                self.expression(0)
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==GParser.T__1:
                    self.state = 113
                    self.match(GParser.T__1)
                    self.state = 114
                    self.expression(0)
                    self.state = 119
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 120
                self.match(GParser.T__9)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.match(GParser.IDENTIFIER)
                self.state = 123
                self.match(GParser.T__6)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReturnStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None # ExpressionContext

        def expression(self):
            return self.getTypedRuleContext(GParser.ExpressionContext,0)


        def getRuleIndex(self):
            return GParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStatement" ):
                return visitor.visitReturnStatement(self)
            else:
                return visitor.visitChildren(self)




    def returnStatement(self):

        localctx = GParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_returnStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(GParser.T__10)
            self.state = 127
            localctx.value = self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.condition = None # ExpressionContext

        def expression(self):
            return self.getTypedRuleContext(GParser.ExpressionContext,0)


        def getRuleIndex(self):
            return GParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = GParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_ifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(GParser.T__11)
            self.state = 130
            localctx.condition = self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ElseIfStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.condition = None # ExpressionContext

        def expression(self):
            return self.getTypedRuleContext(GParser.ExpressionContext,0)


        def getRuleIndex(self):
            return GParser.RULE_elseIfStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseIfStatement" ):
                listener.enterElseIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseIfStatement" ):
                listener.exitElseIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseIfStatement" ):
                return visitor.visitElseIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def elseIfStatement(self):

        localctx = GParser.ElseIfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_elseIfStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(GParser.T__12)
            self.state = 133
            localctx.condition = self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ElseStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GParser.RULE_elseStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseStatement" ):
                listener.enterElseStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseStatement" ):
                listener.exitElseStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseStatement" ):
                return visitor.visitElseStatement(self)
            else:
                return visitor.visitChildren(self)




    def elseStatement(self):

        localctx = GParser.ElseStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_elseStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(GParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ForLoopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.variable = None # Token
            self.over = None # ExpressionContext

        def IDENTIFIER(self):
            return self.getToken(GParser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(GParser.ExpressionContext,0)


        def getRuleIndex(self):
            return GParser.RULE_forLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForLoop" ):
                listener.enterForLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForLoop" ):
                listener.exitForLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForLoop" ):
                return visitor.visitForLoop(self)
            else:
                return visitor.visitChildren(self)




    def forLoop(self):

        localctx = GParser.ForLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_forLoop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(GParser.T__14)
            self.state = 138
            localctx.variable = self.match(GParser.IDENTIFIER)
            self.state = 139
            self.match(GParser.T__15)
            self.state = 140
            localctx.over = self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WhileLoopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.condition = None # ExpressionContext

        def expression(self):
            return self.getTypedRuleContext(GParser.ExpressionContext,0)


        def getRuleIndex(self):
            return GParser.RULE_whileLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileLoop" ):
                listener.enterWhileLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileLoop" ):
                listener.exitWhileLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileLoop" ):
                return visitor.visitWhileLoop(self)
            else:
                return visitor.visitChildren(self)




    def whileLoop(self):

        localctx = GParser.WhileLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_whileLoop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(GParser.T__16)
            self.state = 143
            localctx.condition = self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # ExpressionContext
            self.unop = None # Token
            self.expr = None # ExpressionContext
            self.sub = None # ExpressionContext
            self.op = None # Token
            self.right = None # ExpressionContext

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(GParser.ExpressionContext,i)


        def listExpression(self):
            return self.getTypedRuleContext(GParser.ListExpressionContext,0)

